# fastapi-tryout

./: LICENSE.txt  README.md  database.sql  pyproject.toml
fastapi_tryout/: main.py
fastapi_tryout/db/: accounts.sql
